--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -1,6 +1,7 @@
 <nav>
   <h1 class="left">
-    <a class="pointer logo" routerLink="/home">Ansa Davis</a>
+    <img class="logo" src="assets/images/Potato.svg.png">
+    <a class="pointer" routerLink="/home">Ansa Davis</a>
   </h1>
   <ul class="right">
     <li class="pointer" routerLink="/home">Home</li>
